# Zakupomania

./: CMakeLists.txt  J_Handlowa.cpp  J_Handlowa.h  Losowy.cpp  Losowy.h  Maksymalista.cpp  Maksymalista.h  Miasto.cpp  Miasto.h  Mieszkaniec.cpp  Mieszkaniec.h  Minimalista.cpp  Minimalista.h  Oszczedny.cpp  Oszczedny.h  Poszukiwacz.cpp  Poszukiwacz.h  Siec.cpp  Siec.h  Sklep.cpp  Sklep.h  Symulacja.cpp  Symulacja.h  Towar.cpp  Towar.h  Tradycjny.cpp  Tradycjny.h  Wierny.cpp  Wierny.h  main.cpp
