cmake_minimum_required(VERSION 3.21)
project(Zaliczeniowy)

set(CMAKE_CXX_STANDARD 14)

add_executable(Zaliczeniowy main.cpp Miasto.cpp Miasto.h Towar.cpp Towar.h Sklep.cpp Sklep.h Siec.cpp Siec.h Mieszkaniec.cpp Mieszkaniec.h Wierny.cpp Wierny.h Minimalista.cpp Minimalista.h Maksymalista.cpp Maksymalista.h Losowy.cpp Losowy.h Poszukiwacz.cpp Poszukiwacz.h Tradycjny.cpp Tradycjny.h Oszczedny.cpp Oszczedny.h J_Handlowa.cpp J_Handlowa.h Symulacja.cpp Symulacja.h)
